# miCompaWeb

./: .env.example  .gitignore  CONTEXTO.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  miCompaWeb-RECARGADO.md  migrate-to-wsl-v2.sh  migrate-to-wsl.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docker/: nginx.conf  searxng-settings.yml
docs/: M1-TEST-CHECKLIST.md  ROADMAP-PRODUCCION.md  gui-migration-plan.md  informe-competencia.html
scripts/: entrypoint.sh  healthcheck.sh  install_with_progress.py
src/: __init__.py
src/micompaweb/: __init__.py  __main__.py
src/micompaweb/app/: __init__.py  api.py  cli.py
src/micompaweb/application/: __init__.py
src/micompaweb/application/ports/: __init__.py  cache.py  exporter.py  lead_source.py  llm_client.py  web_auditor.py
src/micompaweb/application/services/: __init__.py  competitor_service.py  cost_guardian.py  doctor.py  email_generator.py  market_health.py  places_extractor.py  prospecting_service.py  revenue_service.py  scoring_service.py  sentiment_adapter.py
src/micompaweb/application/ui/: input_agent.py  setup_wizard.py  wizard.py
src/micompaweb/domain/: __init__.py
src/micompaweb/domain/models/: __init__.py  lead.py  niche.py  project.py  revenue.py  scoring.py
src/micompaweb/domain/rules/: __init__.py  guardian.py
src/micompaweb/domain/services/: __init__.py
src/micompaweb/infrastructure/: __init__.py  cost_guardian.py  deps_manager.py  retry.py
src/micompaweb/infrastructure/adapters/: __init__.py
src/micompaweb/infrastructure/adapters/audit/: __init__.py  cached_auditor.py  crawl4ai_auditor.py  simple_auditor.py
src/micompaweb/infrastructure/adapters/exports/: __init__.py  csv_exporter.py  html_exporter.py  json_exporter.py
src/micompaweb/infrastructure/adapters/lead_sources/: __init__.py  cached_source.py  fixture_source.py  google_places_source.py  lead_source_manager.py
src/micompaweb/infrastructure/adapters/llm/: __init__.py  groq_client.py  heuristic_client.py  llm_chain.py  ollama_client.py  prompts.py
src/micompaweb/infrastructure/browser/: __init__.py  anti_bot.py  executors.py  orchestrator.py
src/micompaweb/infrastructure/cache/: __init__.py  sqlite_cache.py
src/micompaweb/infrastructure/config/: settings.py
src/micompaweb/infrastructure/logging/: __init__.py  setup.py
src/micompaweb/infrastructure/m2/: __init__.py  chunker.py  embedder.py  pipeline.py  searxng_client.py  tls_fetcher.py  trafilatura_extractor.py  vector_store.py
src/micompaweb/presentation/tui/: __init__.py  closing_menu.py  closing_screen.py  progress_panel.py  result_table.py  welcome_banner.py
static_mockup/outreach/: editor.html  index.html  logs.html  preview.html
templates/web/: dashboard.html
tests/: __init__.py  conftest.py
tests/e2e/: test_e2e_pipeline.py
tests/integration/: test_end_to_end.py  test_lead_source_contract.py
tests/unit/: test_adapters.py  test_anti_bot.py  test_cli_commands.py  test_closing_menu.py  test_deps_manager.py  test_doctor.py  test_input_agent.py  test_input_guardian.py  test_logging_setup.py  test_m2_stack.py  test_phase3_intelligence.py  test_phase4_revenue.py  test_progress_panel.py  test_prospecting_service.py  test_retry.py  test_scoring_service.py  test_setup_wizard.py  test_simple_auditor.py
