[project]
name = "micompaweb"
version = "1.2.0"
description = "AI-powered CLI for web agency prospecting & automation - Production Ready"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "El Compa Digital"}
]
keywords = [
    "prospecting", "web-agency", "cli", "lead-generation",
    "anti-bot", "local-first", "rag", "vector-search"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

# Core minimo (~12MB, instala en segundos)
dependencies = [
    "typer>=0.12.0",           # CLI framework
    "rich>=13.0.0",            # Terminal UX
    "questionary>=2.0.0",      # Wizard interactivo
    "tenacity>=8.0.0",         # Retry logic
    "structlog>=24.0.0",       # Structured logging
    "pydantic>=2.6.0",         # Data models
    "pydantic-settings>=2.0.0", # Settings management
    "httpx>=0.27.0",           # HTTP client
    "aiosqlite>=0.20.0",       # SQLite async
    "jinja2>=3.1.0",           # Templates
    "python-dotenv>=1.0.0",    # Config
    "beautifulsoup4>=4.12.0",  # HTML parsing (core)
    "lxml>=5.0.0",             # Parser rapido (core)
    # --- M2: Anti-bot + RAG stack (local-first) ---
    "curl-cffi>=0.6.0",        # TLS fingerprint spoofing
    "trafilatura>=1.7.0",      # Content extraction
    "qdrant-client>=1.8.0",    # Vector DB client
    "fastembed>=0.2.0",        # Local embeddings (no API keys)
    "numpy>=1.26.0",           # Embeddings math
]

[project.optional-dependencies]
# Grupo 1: Auditoria web avanzada (opcional, +50MB por Chrome)
audit = [
    "crawl4ai>=0.4.0",         # Scraping con Chrome (pesado)
]

# Grupo 2: Fuentes de leads
places = [
    "googlemaps>=4.10.0",      # Google Places API
]

# Grupo 3: LLM providers (elige uno o ambos)
llm-local = [
    "ollama>=0.1.0",           # LLM local
]

llm-cloud = [
    "groq>=0.4.0",             # Groq Cloud (rapido)
    "openrouter>=0.1.0",       # OpenRouter (fallback)
]

# Grupo 4: Exportaciones avanzadas
export = [
    "openpyxl>=3.1.0",         # Excel
    "pandas>=2.0.0",           # DataFrames
]

# Grupo 5: Integraciones
integrations = [
    "notion-client>=2.0.0",    # Notion
]

# Todo en uno (para power users)
full = [
    "micompaweb[audit,places,llm-local,llm-cloud,export,integrations]"
]

# Desarrollo
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",             # Mock httpx
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

# Testing completo
test = [
    "micompaweb[dev,full]",
]

# Produccion: solo runtime deps + extras
prod = [
    "micompaweb[full]",
]

[project.scripts]
micompaweb = "micompaweb.app.cli:app"

[project.urls]
Homepage = "https://github.com/elcompadigital/micompaweb"
Documentation = "https://docs.micompaweb.dev"
Repository = "https://github.com/elcompadigital/micompaweb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks integration tests involving external services",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=micompaweb",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=65",
]

[tool.coverage.run]
source = ["micompaweb"]
omit = [
    "*/tests/*",
    "*/test_*",
    "micompaweb/app/cli.py",  # CLI entry point
    "micompaweb/infrastructure/m2/",  # M2 adapters (integration tested)
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if os.getenv",
    "try:",
    "except ImportError",
    "except .* as e:",
]
